[metadata]
root_url = https://github.com/otosense/
license = apache-2.0
author = OtoSense
version = 0.0.1
description = Tools to make codecs for time-series serialization and deserialization.
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = recode
display_name = recode

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

