[metadata]
name = recode
version = 0.1.23
url = https://github.com/otosense/recode
platforms = any
description_file = README.md
root_url = https://github.com/otosense/
license = apache-2.0
author = OtoSense
description = Tools to make codecs for time-series serialization and deserialization.
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = recode

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

