[metadata]
name = recode
version = 0.1.36
url = https://github.com/i2mint/recode
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = Thor Whalen
description = Tools to make codecs for time-series serialization and deserialization.
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
	time-series
	serialization
	deserialization
	codec
	audio
display_name = recode

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =